changed page title

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 
-		<title>Demo Coffee | Porto - Responsive HTML5 Template 7.6.0</title>	
+		<title>Demo Coffee</title>
 
 		<meta name="keywords" content="HTML5 Template" />
 		<meta name="description" content="Porto - Responsive HTML5 Template">
@@ -84,7 +84,7 @@
 					data-x="center"
 					data-y="center"
 					data-fontsize="['62','62','62','100']"
-					data-lineheight="['65','65','65','105']">FRESH PORTO COFFEE</h1>
+					data-lineheight="['65','65','65','105']">CAFFEINE & CUISINE</h1>
 
 				<div class="tp-caption text-color-light font-weight-light"
 					data-frames='[{"from":"opacity:0;","speed":300,"to":"o:1;","delay":2300,"split":"chars","splitdelay":0.05,"ease":"Power2.easeInOut"},{"delay":"wait","speed":1000,"to":"y:[100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power2.easeInOut"}]'
